Add timestamps for created and updated and track these in view page and API
