# web/static/openapi.yml
@@ -118,6 +118,14 @@ components:
         content:
           type: string
           example: 'Some post content.'
+        created_at:
+          type: string
+          format: date-time
+          example: '2018-06-21T09:12:00Z'
+        updated_at:
+          type: string
+          format: date-time
+          example: '2018-06-21T09:12:00Z'
     Posts:
       required:
         - links
